<resources>
    <string name="app_name">CarZone</string>
    <string name="button_addCar">Add Car</string>
    <string name="hint_carTitle">Car Title</string>
    <string name="hint_carDescription">Description </string>
    <string name="hint_carEngineSize">EngineSize </string>
    <string name="hint_carDoors">Doors </string>
    <string name="hint_carModel">Model </string>
    <string name="menu_addCar">Add</string>
    <string name="menu_cancelCar">Cancel</string>
    <string name="enter_car_title"> Please enter All car details </string>
    <string name="enter_car_model"> Please enter the model of the car </string>
    <string name="enter_car_enginesize"> Please enter the engine size </string>
    <string name="enter_cardescription_"> Please enter cars description </string>
    <string name="enter_car_doors"> Please enter amount of doors </string>

    <string name="save_car"> Save Car </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_car_image">Select car image</string>
    <string name="change_car_image">Change car image</string>
    <string name="car_image">car image</string>
    <string name="button_location">Visit Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteCar">Delete</string>

</resources>
